crates/flowscope-core/tests/snapshots/golden__golden_window_functions_emit_columns.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "column_208687717881053c",
          "type": "column",
          "label": "id",
          "qualifiedName": "employees.id"
        },
        {
          "id": "column_a4be1b20b5f604d9",
          "type": "column",
          "label": "rn",
          "expression": "ROW_NUMBER() OVER (PARTITION BY dept)",
          "metadata": {
            "data_type": "INTEGER"
          }
        },
        {
          "id": "column_d8bba385e09d94a9",
          "type": "column",
          "label": "id"
        },
        {
          "id": "output_b558dd754c71cfa6",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_1d63721b3610a67f",
          "type": "table",
          "label": "employees",
          "qualifiedName": "employees"
        }
      ],
      "edges": [
        {
          "id": "edge_0d4efff970b71ad2",
          "from": "column_208687717881053c",
          "to": "column_d8bba385e09d94a9",
          "type": "data_flow"
        },
        {
          "id": "edge_4c64818a03f23ebe",
          "from": "output_b558dd754c71cfa6",
          "to": "column_a4be1b20b5f604d9",
          "type": "ownership"
        },
        {
          "id": "edge_b1adfd2ed7cda1e5",
          "from": "output_b558dd754c71cfa6",
          "to": "column_d8bba385e09d94a9",
          "type": "ownership"
        },
        {
          "id": "edge_d0d8e0de8ab72937",
          "from": "table_1d63721b3610a67f",
          "to": "column_208687717881053c",
          "type": "ownership"
        }
      ],
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_8d19bd6c3446f90a",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "schema": "employees",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_208687717881053c"
          }
        ]
      },
      {
        "id": "column_a4be1b20b5f604d9",
        "type": "column",
        "label": "rn",
        "canonicalName": {
          "name": "rn"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_a4be1b20b5f604d9"
          }
        ]
      },
      {
        "id": "column_d8bba385e09d94a9",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_d8bba385e09d94a9"
          }
        ]
      },
      {
        "id": "output_b558dd754c71cfa6",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_b558dd754c71cfa6"
          }
        ]
      },
      {
        "id": "table_1d63721b3610a67f",
        "type": "table",
        "label": "employees",
        "canonicalName": {
          "name": "employees"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_1d63721b3610a67f"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_0d4efff970b71ad2",
        "from": "column_8d19bd6c3446f90a",
        "to": "column_d8bba385e09d94a9",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_4c64818a03f23ebe",
        "from": "output_b558dd754c71cfa6",
        "to": "column_a4be1b20b5f604d9",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_b1adfd2ed7cda1e5",
        "from": "output_b558dd754c71cfa6",
        "to": "column_d8bba385e09d94a9",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_d0d8e0de8ab72937",
        "from": "table_1d63721b3610a67f",
        "to": "column_8d19bd6c3446f90a",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 3,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  }
}
