crates/flowscope-core/tests/snapshots/golden__imported_schema_resolves_via_default_schema.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "column_11dd4284c883d245",
          "type": "column",
          "label": "email"
        },
        {
          "id": "column_146291330e487758",
          "type": "column",
          "label": "id",
          "qualifiedName": "public.users.id"
        },
        {
          "id": "column_d8bba385e09d94a9",
          "type": "column",
          "label": "id"
        },
        {
          "id": "column_e40458cf3907cc5e",
          "type": "column",
          "label": "email",
          "qualifiedName": "public.users.email"
        },
        {
          "id": "output_b558dd754c71cfa6",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_61860e36618f6e44",
          "type": "table",
          "label": "users",
          "qualifiedName": "public.users",
          "resolutionSource": "imported"
        }
      ],
      "edges": [
        {
          "id": "edge_0fd7c9d999a9289c",
          "from": "table_61860e36618f6e44",
          "to": "column_e40458cf3907cc5e",
          "type": "ownership"
        },
        {
          "id": "edge_52c9c774e1c2efa0",
          "from": "output_b558dd754c71cfa6",
          "to": "column_11dd4284c883d245",
          "type": "ownership"
        },
        {
          "id": "edge_686fd17f81858f87",
          "from": "table_61860e36618f6e44",
          "to": "column_146291330e487758",
          "type": "ownership"
        },
        {
          "id": "edge_95d69f2aacc42e40",
          "from": "column_e40458cf3907cc5e",
          "to": "column_11dd4284c883d245",
          "type": "data_flow"
        },
        {
          "id": "edge_ab771613ce0a9cf7",
          "from": "column_146291330e487758",
          "to": "column_d8bba385e09d94a9",
          "type": "data_flow"
        },
        {
          "id": "edge_b1adfd2ed7cda1e5",
          "from": "output_b558dd754c71cfa6",
          "to": "column_d8bba385e09d94a9",
          "type": "ownership"
        }
      ],
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_11dd4284c883d245",
        "type": "column",
        "label": "email",
        "canonicalName": {
          "name": "email"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_11dd4284c883d245"
          }
        ]
      },
      {
        "id": "column_422dbff9bab1c4b2",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "catalog": "public",
          "schema": "users",
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_146291330e487758"
          }
        ]
      },
      {
        "id": "column_9cf31ab8333dc87c",
        "type": "column",
        "label": "email",
        "canonicalName": {
          "catalog": "public",
          "schema": "users",
          "name": "email"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_e40458cf3907cc5e"
          }
        ]
      },
      {
        "id": "column_d8bba385e09d94a9",
        "type": "column",
        "label": "id",
        "canonicalName": {
          "name": "id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_d8bba385e09d94a9"
          }
        ]
      },
      {
        "id": "output_b558dd754c71cfa6",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_b558dd754c71cfa6"
          }
        ]
      },
      {
        "id": "table_61860e36618f6e44",
        "type": "table",
        "label": "users",
        "canonicalName": {
          "schema": "public",
          "name": "users"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_61860e36618f6e44"
          }
        ],
        "resolutionSource": "imported"
      }
    ],
    "edges": [
      {
        "id": "edge_0fd7c9d999a9289c",
        "from": "table_61860e36618f6e44",
        "to": "column_9cf31ab8333dc87c",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_52c9c774e1c2efa0",
        "from": "output_b558dd754c71cfa6",
        "to": "column_11dd4284c883d245",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_686fd17f81858f87",
        "from": "table_61860e36618f6e44",
        "to": "column_422dbff9bab1c4b2",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_95d69f2aacc42e40",
        "from": "column_9cf31ab8333dc87c",
        "to": "column_11dd4284c883d245",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_ab771613ce0a9cf7",
        "from": "column_422dbff9bab1c4b2",
        "to": "column_d8bba385e09d94a9",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_b1adfd2ed7cda1e5",
        "from": "output_b558dd754c71cfa6",
        "to": "column_d8bba385e09d94a9",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 4,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "schema": "public",
        "name": "users",
        "columns": [
          {
            "name": "id",
            "origin": "imported"
          },
          {
            "name": "email",
            "origin": "imported"
          }
        ],
        "origin": "imported",
        "updatedAt": "2024-01-01T00:00:00Z"
      }
    ]
  }
}
